html struct ended

--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
         <!-- Aquí va html generado por javascript -->
     </section>
     <section class="board-game">
+        <main class="enviroment-game"></main>
+        <aside class="content-ruleta">
+
+        </aside>
+        <!-- Aquí va html generado por javascript -->
+    </section>
+    <section class="player-winners">
         <!-- Aquí va html generado por javascript -->
     </section>
 </body>
