adding javascript and css to project and struc start-paged-game ended

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             </blockquote>
             <aside class="options">
                 <h1 class="text-tittle">La Ruleta Biblica</h1>
-                <h2 class="menu-options">Cantidad de jugadores <span>#</span></h2>
-                <input class="menu-options" type="range" min="2" max="10" step="1" value="4">
+                <h2 class="menu-options">Cantidad de jugadores <span id="number-players">#</span></h2>
+                <input class="menu-options" type="range" id="numberPlayers" min="2" max="10" step="1" value="4">
                 <input type="button" class="menu-options" value="Comenzar a jugar" />
                 <input type="button" value="Contactar al desarrollador" class="menu-options" />
             </aside>
@@ -44,5 +44,5 @@
         </section>
     </main>
 </body>
-
-</html>
+<script src="/js/functions.js"></script>
+ </html>
