board-selec-players structured

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
             </blockquote>
             <aside class="options">
                 <h1 class="text-tittle">La Ruleta Biblica</h1>
-                <h2 class="menu-options">Cantidad de jugadores <span id="number-players">#</span></h2>
+                <h2 class="menu-options">Jugadores: <span id="number-players">#</span></h2>
                 <input class="menu-options" type="range" id="numberPlayers" min="2" max="10" step="1" value="4">
                 <input type="button" class="menu-options" value="Comenzar a jugar" />
-                <input type="button" value="Contactar al desarrollador" class="menu-options" />
+                <input type="button" class="menu-options" value="Contactar al desarrollador"/>
             </aside>
         </header>
-        <section class="players-selector container-section">
-
+        <section id="playersSelector" class="players-selector container-section">
+        <h3 class="title-players">Por favor ingresa los nombres de los jugadores</h3>
         </section>
         <section class="name-players container-section">
             <!-- Aquí va html generado por javascript -->
