first-part of game eviroment

--- a/index.html
+++ b/index.html
@@ -29,14 +29,22 @@
         <section id="playersSelector" class="players-selector container-section">
         <h3 class="title-players">Por favor ingresa los nombres de los jugadores</h3>
         </section>
-        <section class="name-players container-section">
-            <!-- Aquí va html generado por javascript -->
-        </section>
         <section class="board-game container-section">
-            <main class="enviroment-game"></main>
-            <aside class="content-ruleta">
+            <section id="name-players" class="name-players">
+                
+            </section>
+            <main class="enviroment-game">
+                <div class="bola positionA"></div>
+                <div class="bola positionB"></div>
+                <div class="bola positionC"></div>
+                <div class="bola positionD"></div>
+                <section id="action-game" class="action-game">
 
-            </aside>
+                </section>
+                <aside class="content-ruleta">
+    
+                </aside>
+            </main>
             <!-- Aquí va html generado por javascript -->
         </section>
         <section class="player-winners container-section">
