logic ruleta in progress

--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
                     <canvas width="600" height="600" id="idruleta"></canvas>
                 </aside>
                 <aside id="conten-interaction" class="conten-interaction">
+                        <input id="btnGiro" value="Girar la ruleta" class="menu-options" type="button">
+                        <input id="btnResult" value="Solucionar  Panel" class="menu-options" type="button">
                 </aside>
             </main>
             <!-- Aquí va html generado por javascript -->
